added service/component to classmap

--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
       "../../../../../../../Services/InfoScreen",
       "../../../../../../../Services/Table",
       "../../../../../../../Services/UIComponent",
+      "../../../../../../../Services/Component",
       "../../../../../../../Services/Mail",
       "../../../../../../../Services/Utilities",
       "../../../../../../../Services/UICore",
