removed status copy usages, added language variables, added interface directory to composer json, gui and model class edits

--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     },
     "classmap": [
       "classes",
+      "Interface",
       "traits",
       "../../../../../../../Services/ActiveRecord",
       "../../../../../../../Services/Repository",
