--- a/composer.json
+++ b/composer.json
@@ -1,32 +1,47 @@
 {
   "name": "srag/digilit",
+  "description": "",
+  "type": "project",
+  "keywords": [
+    "ILIAS",
+    "Plugin",
+    "DigLit"
+  ],
+  "homepage": "https://github.com/studer-raimann/DigLit",
+  "license": "GPL-3.0-only",
   "authors": [
     {
-      "name": "Fabian Schmid",
-      "email": "fs@studer-raimann.ch"
+      "name": "studer + raimann ag",
+      "email": "support@studer-raimann.ch",
+      "homepage": "https://studer-raimann.ch",
+      "role": "Developer"
     }
   ],
-  "require": {},
+  "support": {
+    "issues": "https://plugins.studer-raimann.ch/goto.php?target=uihk_srsu_PLDIGILIT"
+  },
+  "require": {
+    "php": ">=7.0",
+    "srag/dic": ">=0.1.0",
+    "srag/librariesnamespacechanger": ">=0.1.0"
+  },
   "autoload": {
     "psr-4": {
-      "SRAG\\Plugins\\eBook\\": "src/"
+      "srag\\Plugins\\DigiLit\\": "src/"
     },
     "classmap": [
-      "classes",
-      "interfaces",
-      "traits",
-      "../../../../../../../Services/ActiveRecord",
-      "../../../../../../../Services/Repository",
-      "../../../../../../../Services/Link",
-      "../../../../../../../Services/InfoScreen",
-      "../../../../../../../Services/Table",
-      "../../../../../../../Services/UIComponent",
-      "../../../../../../../Services/Component",
-      "../../../../../../../Services/Mail",
-      "../../../../../../../Services/Utilities",
-      "../../../../../../../Services/UICore",
-      "../../../../../../../Services/User",
-      "../../../../../../../Services/Form"
+      "classes"
+    ]
+  },
+  "config": {
+    "classmap-authoritative": true,
+    "optimize-autoloader": true,
+    "sort-packages": true
+  },
+  "scripts": {
+    "pre-autoload-dump": [
+      "srag\\LibrariesNamespaceChanger\\LibrariesNamespaceChanger::rewriteLibrariesNamespaces",
+      "srag\\LibrariesNamespaceChanger\\PHP72Backport::PHP72Backport"
     ]
   }
 }
