--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "srag/digilit",
+  "name": "srsolutions/digilit",
   "description": "",
   "type": "project",
   "keywords": [
@@ -7,19 +7,16 @@
     "Plugin",
     "DigiLit"
   ],
-  "homepage": "https://github.com/studer-raimann/DigiLit",
+  "homepage": "https://github.com/srsolutionsag/DigiLit",
   "license": "GPL-3.0-only",
   "authors": [
     {
-      "name": "studer + raimann ag",
-      "email": "support@studer-raimann.ch",
-      "homepage": "https://studer-raimann.ch",
+      "name": "sr solutions",
+      "email": "support@sr.solutions",
+      "homepage": "https://sr.solutions",
       "role": "Developer"
     }
   ],
-  "support": {
-    "issues": "https://plugins.studer-raimann.ch/goto.php?target=uihk_srsu_PLDIGILIT"
-  },
   "require": {
     "php": ">=7.0",
     "srag/dic": ">=0.1.0",
